--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "dependencies": {
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
+    "eslint-config-prettier": "^8.6.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "prettier": "^2.8.2",
     "sequelize": "^6.28.0"
   }
 }
